<resources>
    <string name="app_name">Manga</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Home Fragment -->
    <string name="home_fragment_name">Android dev</string>
    <string name="home_fragment_email">user@email.com</string>
    <string name="home_fragment_trending">Trending Manga</string>

    <!-- Bottom Navigation -->
    <string name="bottom_navigation_home">Home</string>
    <string name="bottom_navigation_manga">Manga</string>
    <string name="bottom_navigation_search">Search</string>
    <string name="bottom_navigation_profile">Profile</string>
</resources>