<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/profileImageLayout"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="32dp"
        app:cardCornerRadius="100dp"
        app:cardElevation="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_profile_img" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/profileTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/home_fragment_name"
        android:textColor="@color/grey"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/profileImageLayout"
        app:layout_constraintTop_toTopOf="@+id/profileImageLayout" />

    <TextView
        android:id="@+id/profileTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/home_fragment_email"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/profileImageLayout"
        app:layout_constraintStart_toEndOf="@+id/profileImageLayout" />

    <TextView
        android:id="@+id/homeTextTrending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_fragment_trending"
        android:layout_marginTop="32dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/profileImageLayout"
        app:layout_constraintTop_toBottomOf="@+id/profileImageLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_trending"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="30dp"
        android:clipToPadding="false"
        tools:listitem="@layout/item_home_trending_manga"
        app:layout_constraintTop_toBottomOf="@+id/homeTextTrending" />

</androidx.constraintlayout.widget.ConstraintLayout>